<resources>
    <string name="app_name">My Quiz Application</string>
    <string name="around_the_world_trivia">Around The World Trivia</string>
    <string name="sign_out">Sign Out</string>
    <string name="start">Start</string>
    <string name="highscore_0">Highscore:</string>
    <string name="globe">Globe</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="logo">logo</string>
    <string name="register_account">Register Account</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="score">Score:</string>
    <string name="value">Value:</string>
    <string name="welcomeUser">Hello,</string>
</resources>
